Added Canvas::load_pixels(), benchmark and demo
  - Canvas: added load_pixels() to allow 32-bit pixel data to be loaded
    directly into the source Canvas' buffer.
  - Added benchmark for Canvas::load_pixels().
  - Added sprite demo and code to load an image into the sprite_canv
    Canvas.
  - www/i/ferris.png: sprite source PNG data.

--- a/www/index.html
+++ b/www/index.html
@@ -52,6 +52,10 @@
         <label for="cb_demo_rotating_line">Toggle rotating line</label>
       </div>
       <div class="toggle">
+        <input id="cb_demo_sprite" type="checkbox" />
+        <label for="cb_demo_sprite">Toggle sprite</label>
+      </div>
+      <div class="toggle">
         <input id="cb_demo_vlines" type="checkbox" />
         <label for="cb_demo_vlines">Toggle vertical lines</label>
       </div>
