--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
     <canvas id="main-canvas"></canvas>
     <div class="controls">
       <div>
-        <input id="cb_clear" type="checkbox" />
+        <input id="cb_clear" type="checkbox" checked />
         <label for="cb_clear">Clear canvas for each frame</label>
       </div>
       <hr />
@@ -54,6 +54,10 @@
       <div class="toggle">
         <input id="cb_demo_sprite" type="checkbox" />
         <label for="cb_demo_sprite">Toggle sprite</label>
+      </div>
+      <div class="toggle">
+        <input id="cb_demo_textured_triangle" type="checkbox" />
+        <label for="cb_demo_textured_triangle">Toggle textured triangle</label>
       </div>
       <div class="toggle">
         <input id="cb_demo_vlines" type="checkbox" />
